[workspace]
resolver = "2"
members = [
    "crates/kobalt-core",
    "crates/kobalt-render",
    "crates/kobalt-runtime",
    "crates/kobalt-widgets",
    "crates/kobalt-macros",
    "crates/kobalt-examples",
]

[workspace.package]
version = "0.0.2"
edition = "2024"
license = "MIT"
authors = ["Kobalt Contributors"]

[workspace.dependencies]

[package]
name = "kobalt"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "A modern, declarative UI framework for Rust inspired by Flutter and Jetpack Compose"

[dependencies]
kobalt-core = { version = "0.0.2", path = "crates/kobalt-core" }
kobalt-render = { version = "0.0.2", path = "crates/kobalt-render" }
kobalt-runtime = { version = "0.0.2", path = "crates/kobalt-runtime" }
kobalt-widgets = { version = "0.0.2", path = "crates/kobalt-widgets" }
kobalt-macros = { version = "0.0.2", path = "crates/kobalt-macros" }
