[package]
name = "kobalt-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core functionality for Kobalt UI framework - Widget Tree, Layout, State Management, MVVM"

[dependencies]

[dev-dependencies]
