[package]
name = "kobalt-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Declarative macros for Kobalt UI framework"

[dependencies]
kobalt-widgets = { path = "../kobalt-widgets" }
kobalt-runtime = { path = "../kobalt-runtime" }

[dev-dependencies]
