[package]
name = "kobalt-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Declarative macros for Kobalt UI framework"

[dependencies]
kobalt-widgets = { version = "0.0.2", path = "../kobalt-widgets" }
kobalt-runtime = { version = "0.0.2", path = "../kobalt-runtime" }

[dev-dependencies]
