[package]
name = "kobalt-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cross-platform runtime for Kobalt UI framework (Desktop/Mobile/Web)"

[dependencies]
kobalt-core = { path = "../kobalt-core" }
kobalt-render = { path = "../kobalt-render" }
kobalt-widgets = { path = "../kobalt-widgets" }
winit = "0.30"
wgpu = "27.0.1"
pollster = "0.4"

[dev-dependencies]
