[package]
name = "kobalt-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cross-platform runtime for Kobalt UI framework (Desktop/Mobile/Web)"

[dependencies]
kobalt-core = { version = "0.0.2", path = "../kobalt-core" }
kobalt-render = { version = "0.0.2", path = "../kobalt-render" }
kobalt-widgets = { version = "0.0.2", path = "../kobalt-widgets" }
winit = "0.30"
wgpu = "27.0.1"
pollster = "0.4"

[dev-dependencies]
